--- a/index.html
+++ b/index.html
@@ -28,21 +28,44 @@
 	</body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.627.0.min.js"></script>
 	<!-- API gateway lib -->
-	<script type="text/javascript" src="assets/js/sdk/lib/axios/dist/axios.standalone.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/CryptoJS/rollups/hmac-sha256.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/CryptoJS/rollups/sha256.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/CryptoJS/components/hmac.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/CryptoJS/components/enc-base64.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/url-template/url-template.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/apiGatewayCore/sigV4Client.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/apiGatewayCore/apiGatewayClient.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/apiGatewayCore/simpleHttpClient.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/lib/apiGatewayCore/utils.js"></script>
-	<script type="text/javascript" src="assets/js/sdk/apigClient.js"></script>
+    <script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/axios/dist/axios.standalone.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/CryptoJS/rollups/hmac-sha256.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/CryptoJS/rollups/sha256.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/CryptoJS/components/hmac.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/CryptoJS/components/enc-base64.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/url-template/url-template.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/apiGatewayCore/sigV4Client.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/apiGatewayCore/apiGatewayClient.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/apiGatewayCore/simpleHttpClient.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/lib/apiGatewayCore/utils.js"></script>
+	<script type="text/javascript" src="assets/js/apiGateway-js-sdk/apigClient.js"></script>
     <script src="assets/js/chat.js"></script>
 	<script>
-		 sdk = apigClientFactory.newClient({
+        // var credentials = AWS.config.credentials;
+        // credentials.get(function(err){
+        //     if (err) {
+        //       console.log(err);
+        //     } else {
+        //       // Access AWS resources here.
+        //       console.log('obtained AWS credentials');
+        //
+        //       sdk = apigClientFactory.newClient({
+        //         accessKey: credentials.accessKeyId,
+        //         secretKey: credentials.secretAccessKey,
+        //         sessionToken: credentials.sessionToken
+        //       });
+        //
+        //       console.log(credentials)
+        //
+        //       console.log('initialized sdk');
+        //
+        //       $('.chat').removeClass('hide');
+        //     }
+        // });
+        //   console.log("sdk initial success");
+         sdk = apigClientFactory.newClient({
              region: 'us-east-1'
           });
 	</script>
